# EchoVault

./: .dockerignore  .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  .release-please-manifest-beta.json  .release-please-manifest.json  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  add_test.py  apply_optimization.py  audit.toml  docker-compose.yml  doppler.yaml  find_keyring_method.rs  install-cli.ps1  install-cli.sh  install.ps1  install.sh  mise.toml  modify_app.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config-beta.json  release-please-config.json  repro.js  repro.mjs  repro_fix.mjs  reproduce_issue.rs  test_fmt_2.rs  update_commands.py  update_commands_read.py
.Jules/: palette.md
.agent/rules/: project-context.md
.agent/workflows/: echovault-testing.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: project-context.instructions.md
.github/rulesets/: development.json  production.json
.github/workflows/: cd.yml  ci.yml  release.yml
.jules/: sentinel.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/core/: Cargo.toml
apps/core/src/: config.rs  lib.rs  mcp.rs  session.rs  vault.rs  watcher.rs
apps/core/src/embedding/: chunker.rs  mod.rs  provider.rs  store.rs
apps/core/src/extractors/: aider.rs  antigravity.rs  claude_code.rs  cline.rs  codex.rs  continue_dev.rs  cursor.rs  gemini_cli.rs  jetbrains.rs  mod.rs  opencode.rs  vscode_common.rs  vscode_copilot.rs  zed.rs
apps/core/src/interceptor/: cert.rs  logger.rs  mod.rs  proxy.rs
apps/core/src/parsers/: aider.rs  antigravity.rs  claude_code.rs  cline.rs  codex.rs  continue_dev.rs  cursor.rs  gemini_cli.rs  jetbrains.rs  markdown_writer.rs  mod.rs  opencode.rs  vscode_copilot.rs  zed.rs
apps/core/src/storage/: index.rs  mod.rs  sync_manager.rs  sync_test.rs  vault_db.rs
apps/core/src/sync/: local.rs  mod.rs  provider.rs  rclone.rs
apps/core/src/utils/: browser.rs  ingest.rs  mod.rs  wsl.rs
apps/core/tests/: parser_tests.rs
apps/core/tests/fixtures/: codex_session.jsonl  jetbrains_workspace.xml  vscode_copilot_v1.jsonl  vscode_copilot_v3.jsonl  zed_agent_thread.json
apps/tauri/: Cargo.toml  tauri.conf.json  tauri.key.pub
apps/tauri/icons/: icon.icns
apps/tauri/src/: commands.rs  lib.rs  main.rs
apps/web/: biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/playwright-report/: index.html
apps/web/src/: App.tsx  TextEditor.tsx
apps/web/tests/: embedding-settings.spec.ts  happy-path.spec.ts
crates/echovault-core/: Cargo.toml
crates/echovault-core/src/: config.rs  lib.rs  vault.rs  watcher.rs
crates/echovault-core/src/extractors/: antigravity.rs  mod.rs  vscode_copilot.rs
crates/echovault-core/src/storage/: chunked.rs
crates/echovault-core/src/sync/: git.rs  github.rs  google_drive.rs  mod.rs  oauth.rs  provider.rs  rclone.rs
crates/echovault-core/src/utils/: browser.rs
docker/: Dockerfile.build  run.sh
docs/: HANDBOOK.md
scripts/: build-rust.mjs  download-crsqlite.mjs  download-rclone.mjs  logo_processing.py  reset-app.mjs  setup-dev.mjs
src/: config.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/src/: commands.rs  lib.rs  main.rs
src-web/: .prettierrc  biome.json  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
src-web/src/: App.tsx  TextEditor.tsx  index.css
src/cli/: commands.rs  mod.rs
src/crypto/: encryption.rs  key_derivation.rs  mod.rs
src/extractors/: mod.rs  vscode_copilot.rs
src/formatters/: markdown.rs  mod.rs
src/storage/: chunked.rs  index.rs  mod.rs
src/sync/: git.rs  mod.rs  oauth.rs
src/utils/: browser.rs  mod.rs
