[package]
name = "echovault"
version = "0.2.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = ["crates/echovault-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["n24q02m"]
license = "MIT"
repository = "https://github.com/n24q02m/EchoVault"

[profile.release]
strip = true
lto = true
codegen-units = 1
