[workspace]
resolver = "2"
members = ["apps/core", "apps/tauri"]

[workspace.package]
version = "1.15.0"
edition = "2021"
authors = ["n24q02m"]
license = "MIT"
repository = "https://github.com/n24q02m/EchoVault"

[profile.release]
strip = false     # IMPORTANT: Must be false for Tauri AppImage bundling
lto = true
codegen-units = 1
opt-level = "z"   # Optimize for size
panic = "abort"   # Do not unwind stack when panic

[profile.dev]
opt-level = 1 # Optimize for dev mode
