[package]
name = "echovault-core"
version = "0.1.0"
edition = "2021"
authors = ["n24q02m"]
description = "Core library for EchoVault - Extract and sync chat history across IDEs"
license = "MIT"
repository = "https://github.com/n24q02m/EchoVault"

[lib]
name = "echovault_core"
path = "src/lib.rs"

[dependencies]
# SQLite để đọc IDE databases và index
rusqlite = { version = "0.32", features = ["bundled"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TOML config files
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Cross-platform paths
dirs = "5.0"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Terminal output
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }

# Parallel processing
rayon = "1.10"

# Hostname for distributed lock
hostname = "0.4"

# File system watcher (event-driven, replaces polling)
notify = "7"

[dev-dependencies]
tempfile = "3.14"
