[package]
name = "echovault-core"
version = "0.1.0"
edition = "2021"
authors = ["n24q02m"]
description = "Core library for EchoVault - Extract and sync chat history across IDEs"
license = "MIT"
repository = "https://github.com/n24q02m/EchoVault"

[lib]
name = "echovault_core"
path = "src/lib.rs"

[features]
default = []
ci-sync-test = []
interceptor = ["hudsucker", "http-body-util", "tokio", "rustls-pemfile"]
embedding = ["ureq"]
mcp = ["rmcp", "tokio", "schemars"]

[dependencies]
# SQLite for reading IDE databases and index
# bundled: compile SQLite from source
# load_extension: enable Connection::load_extension() and LoadExtensionGuard
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TOML config files
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Cross-platform paths
dirs = "5.0"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Terminal output
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }

# Parallel processing
rayon = "1.10"

# Hostname for distributed lock
hostname = "0.4"

# File system watcher (event-driven, replaces polling)
notify = "7"

# Structured logging
tracing = "0.1"

# MITM proxy for API interception (optional, feature-gated)
hudsucker = { version = "0.24", features = ["rcgen-ca", "rustls-client"], optional = true }
http-body-util = { version = "0.1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
rustls-pemfile = { version = "2", optional = true }

# Zstd decompression (for Zed Agent threads.db)
zstd = "0.13"

# HTTP client for embedding API (optional, feature-gated)
ureq = { version = "3", features = ["json"], optional = true }

# MCP server SDK (optional, feature-gated)
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"], optional = true }
schemars = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3.14"
